it still works and now looks better

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,14 +8,14 @@
     --primary-color: #0069C4;
     --font-color: #475057;
     --light-color: #C2CCC5;
+    --background-dark-color: rgb(34, 34, 34);
 }
 body{
-    font-family: 'Poppins', Sans-Serif;
-    font-size: 16;
+    font-family: 'Poppins', Sans-Serif, serif;
+    font-size: 16px;
     line-height:1.5;
     background: var(--background-color);
 }
-
 a{
 
     text-decoration: none;
@@ -30,6 +30,7 @@ img {
 /*Navbar*/
 .navbar{
     padding: 20px;
+    min-height: 100px;
 }
 
 .navbar .container{
@@ -46,6 +47,11 @@ img {
     font-weight: 600;
     transition: 0.25s;
 }
+
+.logo{
+    max-width: 200px;
+}
+
 
 /*Hero*/
 .hero {
@@ -92,36 +98,56 @@ img {
     display: grid;
     align-items: center;
     justify-content: center;
-    max-width: 500px;
+
     margin-right:100px ;
     gap: 1rem;
 }
 
 .box-image{
-    width: fit-content;
-    height: fit-content;
+    max-width: 400px;
+    height: auto;
     margin-top: 50px;
     margin-right: 100px;
     border: 2px solid var(--light-color);
     border-radius: 10px;
 }
 
+/*Footer*/
+
+.footer-logo{
+    margin: 10px 0 0 0;
+    max-width: 600px;
+    height: auto;
+}
+.footer-grid{
+    max-width: 1100px;
+    margin: 10px auto;
+    padding: 10px 15px;
+    justify-content: left;
+    justify-self: left;
+    color: var(--light-color);
+}
+
+
+
 /*Utility Classes*/
 .container {
-    max-width: 1100px;
+    max-width: 1400px;
     margin: 0 auto;
     padding: 0 15px;
+    justify-content: center;
 }
 
 .container-2 {
     display: flex;
-    max-width: 1100px;
-    margin: 0 auto;
+    max-width: 1400px;
+    margin: 0 auto ;
     padding: 0 15px;
+    justify-content: center;
 
 }
 .container_sm{
-    max-width: 800px;
+    max-width: 1100px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -155,6 +181,10 @@ img {
     max-width: 225px;
 }
 
+footer{
+    background: var(--background-dark-color);
+}
+
 /*Reference Classes*/
 
 .search-bar-container{
@@ -163,6 +193,61 @@ img {
     margin: 0 auto;
     padding: 0 15px;
 }
+
+.project-container {
+    display: flex;
+    gap: 2rem;
+    align-items: flex-start;
+    margin: 2rem;
+}
+
+.project-image img {
+    max-width: 300px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.project-description {
+    flex: 2;
+}
+
+.project-details {
+    flex: 1;
+}
+
+.project-details p,
+.project-description p {
+    margin: 0.5rem 0;
+}
+
+/*About classes*/
+
+.about-container {
+    display: flex;
+    max-width: 1200px;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 2rem;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+ .about-left{
+     flex: 2;
+ }
+
+.about-right{
+    flex: 1;
+}
+
+.about-right img{
+    max-width: 70%;
+    height: auto;
+    margin: 0 auto 1rem auto;
+    display: block;
+}
+
+
 
 
 
@@ -199,4 +284,8 @@ img {
 .text-box{
     max-width: 500px;
     text-align: center;
+}
+
+.text-justify{
+    text-align: justify;
 }
