--- a/app/views/kp/home.html.erb
+++ b/app/views/kp/home.html.erb
@@ -26,7 +26,7 @@
         Építőipari és mérnöki Kft.
       </p>
       <div>
-      <a href="#" class="btn btn-primary btn-hero text-center" >Tudjon meg többet!</a>
+      <a href="#target-section" class="btn btn-primary btn-hero text-center" >Tudjon meg többet!</a>
     </div>
     </div>
   </div>
@@ -34,14 +34,14 @@
 
 <section class="box">
   <div class="container">
-    <div class="box-container">
+    <div class="box-container" id="target-section">
       <%= image_tag "munka1.jpg", alt:"Referencia", class: "box-image"%>
-      <div class="text-box">
-        <h2 class="text-xl text-center">Referencia munkáink</h2>
+      <div class="text-box" >
+        <h2 class="text-xl text-center" >Referencia munkáink</h2>
         <p class="text-sm text-center">
           Tekintse meg korábbi projektjeinket és referencia munkáinkat, amelyek bizonyítják szakértelmünket és elkötelezettségünket a minőségi kivitelezés iránt &nbsp; és ismerje meg, hogyan valósítottuk meg ügyfeleink elképzeléseit!
         </p>
-      <a href="#" class="btn btn-primary btn-hero text-center">Tudjon meg többet!</a>
+      <a href="/kp/reference" class="btn btn-primary btn-hero text-center">Tudjon meg többet!</a>
       </div>
     </div>
   </div>
