--- a/app/views/kp/home.html.erb
+++ b/app/views/kp/home.html.erb
@@ -23,7 +23,7 @@
         KITALÁLT KÖZMŰ
       </h1>
       <p class="hero-text text-md text-center">
-        Építőipari és mérnöki Kft.
+        Építőipari és Mérnöki Kft.
       </p>
       <div>
       <a href="#target-section" class="btn btn-primary btn-hero text-center" >Tudjon meg többet!</a>
