--- a/app/views/kp/reference.html.erb
+++ b/app/views/kp/reference.html.erb
@@ -23,9 +23,7 @@
 </head>
 <body>
 <section class="container">
-  <div class="search-bar-container">
-    <h2>Referencia Munkáink</h2>
-  </div>
+    <h2 class="text-xl">Referencia Munkáink</h2>
 </section>
 
 <section class="container">
@@ -46,7 +44,7 @@
           <p><strong>Client:</strong> <%= work.client %></p>
           <p><strong>Location:</strong> <%= work.location %></p>
           <p><strong>Year:</strong> <%= work.year %></p>
-          <p><strong>Value:</strong> <%= work.value %></p>
+          <p><strong>Value:</strong> <%= work.value %> Ft</p>
           <p><strong>Architect:</strong> <%= work.architect %></p>
         </div>
       </div>
