--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
             <a href="#">Álláslehetőségek</a>
           </li>
           <li>
-            <a href="#">Pályázatok</a>
+            <a href="/kp/grants">Pályázatok</a>
           </li>
           <li>
             <a href="/kp/about">Céginformációk</a>
