it still works and now looks better

--- a/app/views/kp/about.html.erb
+++ b/app/views/kp/about.html.erb
@@ -54,7 +54,7 @@
   </div>
 <div class="section-divider"></div>
 
-  <section class="container">
+  <section class="container about-header">
       <h2 class="text-xl">
         Munkatársaink:
       </h2>
@@ -94,13 +94,12 @@
     </div>
   </section>
 
-<div class="section-divider"></div>
+<div class="section-divider "></div>
 
-  <section class="container">
-    <div>
-    <h2 class="text-xl">
-      Eszközparkunk:
-    </h2>
+<section class="container about-header">
+  <h2 class="text-xl">
+    Eszközparkunk:
+  </h2>
     </div>
     <div class="equipment-grid">
       <div class="equipment-item">
