--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -132,6 +132,17 @@ img {
 
 
 /*Utility Classes*/
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 0.3s ease-in forwards;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
+}
+
 .container {
     max-width: 1400px;
     margin: 0 auto;
@@ -330,9 +341,38 @@ footer{
 
 /*Contact Classes*/
 
+.contact-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    max-width: 1400px;
+    justify-content: space-evenly;
+}
 
+.contact-map{
+    max-width: 825px;
+    height: 560px;
+    flex: 2;
+    border-radius: 10px;
+    padding: 5px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
 
+.contact-data{
+    min-width: 300px;
+    max-width: 800px;
+    flex: 1.5;
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
 
+.contact-data img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 1px;
+}
 
 /*Text Classes*/
 
@@ -372,7 +412,8 @@ footer{
 .text-justify{
     text-align: justify;
 }
-.text-600{
+.text-600 {
     font-weight: 600;
 }
+
 
