--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <%= stylesheet_link_tag :app %>
   </head>
 
-  <body>
+  <body  class="fade-in">
   <nav class="navbar text-md">
     <div class="container">
       <div class="logo">
@@ -54,7 +54,7 @@
             <a href="/kp/about">Céginformációk</a>
           </li>
           <li>
-            <a class="btn" href="#">Kapcsolat</a>
+            <a class="btn" href="/kp/contact">Kapcsolat</a>
           </li>
         </ul>
 
